[package]
name = "wasm-sort-compare"
version = "0.1.0"
authors = ["Michael Scott mscotch1@protonmail.com"]
description = "A test wasm-pack project"
license = "MIT"
repository = "https://github.com/mscotch1/wasm-sort-compare"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
